# python-skeleton

./: .gitignore  .pre-commit-config.yaml  CHANGES.txt  Makefile  README.md  README.rst  license-template.txt  project  project-skeleton  project-template.yaml  project.list  project.yaml  project.yaml.template  pyproject.toml  python-skeleton  python_skeleton.py  setup.py  skeleton-files  tox.ini  tox.toml
.github/workflows/: ci.yaml  ci.yml
docs/: conf.py  index.rst
python_skeleton/: __init__.py  actions.py  context.py  main.py  template.py  update.py
skeleton/: __init__.py
templates/: CHANGES.rst  README.rst  dot-pre-commit-config.yaml  pyproject.toml  tox.toml
templates/docs/: conf.py  index.rst
templates/docs/_templates/: placeholder.txt
templates/dot-github/: dependabot.yaml
templates/dot-github/workflows/: ci.yaml  release.yaml
templates/project/: __init__.py
tree/: CHANGES.rst  Makefile  README.rst  dot-coveragerc  dot-gitignore  dot-readthedocs.yaml  dot-travis.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
tree/docs/: conf.py  index.rst
tree/dot-github/: dependabot.yaml
tree/dot-github/workflows/: ci.yaml  ci.yml  release.yaml
tree/skeleton/: __init__.py
