[project]
name = "python-skeleton"
version = "0.0.1"
description = "Python project skeleton"
authors = [
  { name = "Alberto Donato", email = "alberto.donato@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "pyyaml" ]
urls.homepage = "https://github.com/albertodonato/python-skeleton"

[tool.ruff]
line-length = 79

lint.select = [ "F", "I", "RUF", "UP" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true

[tool.mypy]
install_types = true
non_interactive = true
strict = true
