[project]
name = "python-skeleton"
version = "0.0.1"
description = "Python project skeleton"
maintainers = [
  { name = "Alberto Donato", email = "alberto@albertodonato.net" },
]
authors = [
  { name = "Alberto Donato", email = "alberto@albertodonato.net" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "jinja2",
  "pyyaml",
]
urls.homepage = "https://github.com/albertodonato/python-skeleton"

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "ty",
]

[tool.ruff]
line-length = 79
lint.select = [ "F", "I", "RUF", "UP" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true

[tool.mypy]
ignore_missing_imports = true
strict = true
