[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "{{ project.name }}"
description = "{{ project.title }}"
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
]
license = "{{ project.license }}"
license-files = [ "LICENSE.txt" ]
maintainers = [
  { name = "{{ author.name }}", email = "{{ author.email }}" },
]
authors = [
  { name = "{{ author.name }}", email = "{{ author.email }}" },
]
requires-python = ">={{ project.python_versions.min }}"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  {% for version in project.python_versions.supported_versions -%}
  "Programming Language :: Python :: {{ version }}",
  {% endfor %}
]
dynamic = [
  "version",
]
dependencies = [
]
{% for name, url in project.urls.items() -%}
urls."{{ name }}" = "{{ url }}"
{% endfor %}

[dependency-groups]
dev = [
  "pre-commit",
  "pyproject-fmt",
  "pytest",
  "pytest-cov",
  "ruff",
  "tox-toml-fmt",
  "ty",
]
{%- if config.include_docs %}
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
]
{% endif %}
tests = [
]
types = [
]

[tool.setuptools]
dynamic.version = { attr = "{{ project.package }}.__version__" }
package-data.{{ project.package }} = [ "py.typed" ]
packages.find.include = [ "{{ project.package }}*" ]

[tool.ruff]
line-length = 79
lint.select = [ "F", "I", "RUF", "UP" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true

[tool.pyproject-fmt]
expand_tables = [ "tool.tox" ]

[tool.ty]
rules.unresolved-import = "ignore"

[tool.tox.env_run_base]
runner = "{{ 'uv-venv-lock-runner' if config.use_uv_lock else 'uv-venv-runner' }}"
package = "wheel"
dependency_groups = [ "dev", "tests" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "--cov", "{{ project.package }}/" ], extend = true } ] ]

[tool.tox.env.check]
dependency_groups = [ "dev", "tests", "types" ]
commands = [ [ "ty", "check", { replace = "posargs", default = [], extend = true } ] ]

[tool.tox.env.lint]
package = "skip"
dependency_groups = [ "dev" ]
commands = [ [ "pre-commit", "run", "--all-files" ] ]

[tool.coverage]
run.source = [ "{{ project.package }}" ]
report.fail_under = 100.0
report.show_missing = true
report.skip_covered = true
