[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "${project.name}"
description = "${project.title}"
readme = "README.rst"
keywords = [
]
license = { file = "LICENSE.txt" }
maintainers = [
  { name = "${author.name}", email = "${author.email}" },
]
authors = [
  { name = "${author.name}", email = "${author.email}" },
]
requires-python = ">=${project.python-version}"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
dynamic = [
  "version",
]
dependencies = [
]
optional-dependencies.testing = [
  "pytest",
]
urls.changelog = "${project.url}/blob/main/CHANGES.rst"
urls.homepage = "${project.url}"
urls.repository = "${project.url}"

[project.scripts]


[tool.setuptools.dynamic]
version = { attr = "${project.package}.__version__" }

[tool.setuptools.packages.find]
include = [ "${project.package}*" ]

[tool.setuptools.package-data]
${project.package} = ["py.typed"]

[tool.ruff]
line-length = 79

lint.select = [ "F", "I", "RUF", "UP" ]
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true

[tool.coverage.report]
fail_under = 100.0
show_missing = true
skip_covered = true

[tool.coverage.run]
source = [ "${project.package}" ]

[tool.mypy]
install_types = true
non_interactive = true
strict = true
