[metadata]
name = ${project.name}
version = 0.0.1
license = GPLv3+
description = ${project.title}
long_description = file: README.rst
author = ${author.name}
author_email = ${author.email}
maintainer = ${author.name}
maintainer_email = ${author.email}
url = ${project.url}
download_url = ${project.download-url}
keywords =
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPLv3+)
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
install_requires =
packages = find:
include_package_data = True

[options.packages.find]
include =
    ${project.base}
    ${project.base}.*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =

[globals]
lint_files = setup.py ${project.base}

[coverage:run]
source = ${project.base}
omit =

[coverage:report]
show_missing = True
fail_under = 100.0
skip_covered = True

[flake8]
max-line-length = 80
select = C, E, F, W, B, B950
ignore = E203, E501, W503

[mypy]
incremental = False
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tox]
skipsdist = True

[testenv]
deps =
    .
    .[testing]
commands =
    {envbindir}/pytest {posargs}

[testenv:format]
deps =
    black
    isort
commands =
    {envbindir}/isort --recursive {[globals]lint_files}
    {envbindir}/black -q {[globals]lint_files}

[testenv:lint]
deps =
    black
    flake8
    isort
commands =
    {envbindir}/isort --check-only --diff --recursive {[globals]lint_files}
    {envbindir}/black --check {[globals]lint_files}
    {envbindir}/flake8 {[globals]lint_files}

[testenv:check]
deps =
    mypy
commands =
    {envbindir}/mypy -p ${project.base} {posargs}

[testenv:coverage]
deps =
    .
    .[testing]
    pytest-cov
commands =
    {envbindir}/pytest --cov {posargs}

[testenv:docs]
deps =
    .
    sphinx
    sphinx-autodoc-typehints
commands =
    sphinx-build -b html docs html {posargs}

